# fakenews_detection

./: .gitattributes  .gitignore  1_🤖_Fake_News_Classifier.py  README.md  fakenews_classifier.py  fakenews_detection_v1..ipynb  hello.py  processed_full_docs.spacy  pyproject.toml
.devcontainer/: devcontainer.json
data/: analysis_df.parquet  precomputed_ngrams_combined.parquet  train_cleaned.parquet  train_preprocessed_small.parquet
data/analysis_dataframes/: dependency_counts.parquet  entity_counts.parquet  label_distribution_df.parquet  ngrams.parquet  readability_metrics.parquet
data/big_fake_news_df/: big_fake_news_df_part_1.parquet  big_fake_news_df_part_2.parquet  big_fake_news_df_part_3.parquet
data/model_evaluation/: sklearn_models_evaluation.parquet
data/preprocessed_big_training_df/: preprocessed_big_training_df_part_1.parquet  preprocessed_big_training_df_part_2.parquet
models/: Decision Tree_fake_news_model.pkl  Decision_Tree_model.pkl  Gradient_Boosting_model.pkl  Logistic Regression_fake_news_model.pkl  Logistic_Regression_model.pkl  Naive Bayes_fake_news_model.pkl  Naive_Bayes_model.pkl  Passive-Aggressive_fake_news_model.pkl  Passive_Aggressive_model.pkl  tfidf_vectorizer.pkl
models/bert-base-uncased/: adapter_model.safetensors
models/bert-base-uncased/checkpoint-2762/: adapter_model.safetensors  optimizer.pt  rng_state.pth
models/bert-base-uncased/checkpoint-4143/: adapter_model.safetensors  optimizer.pt
models/bert-base-uncased/checkpoint-5524/: optimizer.pt  rng_state.pth  scheduler.pt  trainer_state.json
models/bert-base-uncased/checkpoint-6905/: optimizer.pt  rng_state.pth  scheduler.pt  trainer_state.json
models/bert-base-uncased/logs/: events.out.tfevents.1737841392.Nikls-Desktop.14188.1  events.out.tfevents.1737892551.Nikls-Desktop.319.1
models/distilbert-base-uncased/checkpoint-1382/: adapter_model.safetensors  rng_state.pth  scheduler.pt  trainer_state.json
models/distilbert-base-uncased/checkpoint-2073/: adapter_config.json  rng_state.pth  scheduler.pt  trainer_state.json
models/distilbert-base-uncased/checkpoint-2764/: adapter_model.safetensors  rng_state.pth  scheduler.pt  trainer_state.json
models/fake-news-distil_bert-base-uncased/: model.safetensors
models/sklearn_models/: Decsion_Tree_model.pkl  Gradient_Boosting_model.pkl  LightGBM_model.pkl  Logistic_Regression_model.pkl  Multinomial_NB_model.pkl  Passive_Aggressive_model.pkl
models/small_bert_quantized/: quantized_model.pth
notebooks/: 1_preprocessing.ipynb  2_data_analysis.ipynb  3_model_training.ipynb  4_model_evaluation.ipynb  bert_model_evaluation.ipynb  bert_model_training_new.ipynb  bert_training_notebook.ipynb  custom_utils.py  data_analysis.ipynb  data_cleanup copy.ipynb  data_cleanup.ipynb  fakenews_detection_v1..ipynb  model_training.ipynb  roberta_testing.ipynb
streamlit_app/: FakeNewsDetection.py  streamlit_config.yaml
streamlit_app/components/: bert_components.py  bert_variants.py  data_analysis_components.py  evaluation_components.py  fill_mask.py  named_entity_recognition.py  question_answering.py  sentiment_analysis.py  text_similarity.py  utils.py
streamlit_app/pages/: 1_🤖_Fake_News_Classifier.py  2_📊_Training_Data_Analysis.py  3_🎯_Model_Evaluation.py  4_test.py  4_🔎_Bert_Playground.py
(+186 files in other folders)
